CSS fixes and layout on mobile

--- a/public/css/front/front.css
+++ b/public/css/front/front.css
@@ -2,7 +2,7 @@ header.masthead {
     background: url(../img/bg-pattern.png), linear-gradient(to left, #2e8893,#0E2231) !important;
 }
 .bg-primary {
-    background: linear-gradient(#2e8893, #2e8893) !important;
+    background: linear-gradient(#FFF0BC, #FFF0BC) !important;
 }
 #mainNav .navbar-brand {
     color: #73a6c0 !important;
